feat(web-client): delete event by id
delete event by id

re #39
