# api-gateway/src/swagger.json
@@ -346,6 +346,50 @@
         "parameters": []
       }
     },
+    "/CalendarEvent/{id}": {
+      "delete": {
+        "tags": ["CalendarEvent"],
+        "summary": "Delete a calendar event by its eventID",
+        "description": "Delete a calendar event by its event ID",
+        "operationId": "DeleteCalendarEventById",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "Unique Calendar Event ID (UUID)",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          }
+        ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Operation status",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/SuccessMessagePair"
+                }
+              }
+            }
+          },
+          "400": {
+            "$ref": "#/components/responses/BadRequest"
+          },
+          "401": {
+            "$ref": "#/components/responses/UnauthorizedError"
+          }
+        },
+        "x-codegen-request-body-name": "body"
+      }
+    },
     "/Clients": {
       "get": {
         "tags": ["Client"],
