# application-data-service/src/server.ts
@@ -10,6 +10,7 @@ import { updateTaskById } from "./controllers/tasks/updateTaskById";
 
 import { createCalendarEventForUser } from "./controllers/calendar/createCalendarEventForUser";
 import { getCalendarEventsForUser } from "./controllers/calendar/getCalendarEventsForUser";
+import { deleteCalendarEventById } from "./controllers/calendar/deleteCalendarEventById";
 
 const expressApp = express();
 
@@ -31,5 +32,6 @@ expressApp.post("/tasks/updateTaskById", updateTaskById);
  */
 expressApp.post("/calendar-events/createCalendarEventForUser", createCalendarEventForUser);
 expressApp.post("/calendar-events/getCalendarEventsForUser", getCalendarEventsForUser);
+expressApp.post("/calendar-events/deleteCalendarEventById", deleteCalendarEventById);
 
 export default expressApp;
